Monitoring/kube-prometheus-stack/ingress.yaml
apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
     name: grafana
     namespace: monitoring-logging
     annotations:
        kubernetes.io/ingress.class: "nginx"
        nginx.ingress.kubernetes.io/use-regex: "true"
        service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
  spec:
    rules:
    - host: grafana.<comapany name>.com
      http:
        paths:
        - backend:
            service:
              name: <grafana service>
              port:
                number: 3000
          path: /
          pathType: Prefix
